# rqd_yolo

./: .gitignore  AGENT_SPEC.md  ANNOTATION_GUIDE.md  CHANGES.md  README.md  RTDETR_GUIDE.md  RTDETR_SETUP.md  TRAINING.md  TRAINING_PROGRESS.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  rqd_cli.py  test_data_generator.py  test_report_roboflow.md  train.py  training_results.md
.claude/: settings.local.json
configs/: dataset.yaml  dataset_roboflow.yaml  evaluation.yaml  experiment.yaml  roboflow_datasets.yaml  rtdetr_train.yaml  rtdetrv2_train.yaml  segmentation.yaml  yolo_train.yaml
scripts/: create_splits.py  download_roboflow.py  train_roboflow.py  validate_dataset.py
scripts/data/: auto_annotate_dataset.py  upload_roboflow_images.py
scripts/training/: train_any_model.py  train_roboflow_config.py  train_rtdetrv2.py  train_yolo12_sequential.py  train_yolo12m_batch8_then_yolo26n.py  train_yolo12m_then_yolo26n.py
scripts/utils/: compare_models.py  monitor_training.py
specs/: 01_product_spec.md  02_functional_spec.md  03_non_functional_spec.md  04_data_spec.md  05_model_spec.md  06_architecture_spec.md  07_interface_contracts.md
src/: __init__.py
src/dataset/: __init__.py  loader.py
src/detection/: __init__.py  base.py  module.py  registry.py
src/evaluation/: __init__.py  module.py
src/foundation_models/: __init__.py  (+1 more)
tests/: conftest.py  test_annotation_utils.py  test_annotation_utils_extended.py  test_contracts.py  test_evaluation.py  test_experiment_tracker.py  test_measurement.py  test_preprocessing.py  test_registry.py  test_rqd.py  test_seeds.py  test_segmentation_fallback.py
tools/: review_annotations.py
(+25 files in other folders)
